--- a/03_create-a-user-interface-with-react-s-createelement-api/index.html
+++ b/03_create-a-user-interface-with-react-s-createelement-api/index.html
@@ -6,5 +6,32 @@
 </head>
 <body>
 
+<div id="root"></div>
+
+<!-- ReactJS create element -->
+<script src="https://unpkg.com/react@16.12.0/umd/react.development.js"></script>
+<script src="https://unpkg.com/react-dom@16.12.0/umd/react-dom.development.js"></script>
+<script>
+    const root_elem = document.getElementById('root');
+
+    const my_elem = React.createElement('div', {
+        children: ["Hello World React", 'Hello again!'],
+        className: 'container'
+    },
+        // 'more child', ' even more'
+    )
+    ReactDOM.render(my_elem,root_elem);
+    const vanilla_elem = document.createElement('div');
+    vanilla_elem.textContent = 'Vanilla Element';
+    vanilla_elem.className = 'container';
+
+    console.log('compare the properties between react element and standard DOM element');
+    console.log('vanilla_elem has plenty of props while react element is more streamlined')
+    console.log(my_elem);
+    console.log(vanilla_elem);
+
+    // root_elem.appendChild(my_elem);
+</script>
+
 </body>
 </html>
