03_create-a-user-interface-with-react-s-createelement-api: add space between children

--- a/03_create-a-user-interface-with-react-s-createelement-api/index.html
+++ b/03_create-a-user-interface-with-react-s-createelement-api/index.html
@@ -15,7 +15,7 @@
     const root_elem = document.getElementById('root');
 
     const my_elem = React.createElement('div', {
-        children: ["Hello World React", 'Hello again!'],
+        children: ["Hello World React", ', Hello again!'],
         className: 'container'
     },
         // 'more child', ' even more'
