05_use-jsx-effectively-with-react/: fix title

--- a/05_use-jsx-effectively-with-react/index.html
+++ b/05_use-jsx-effectively-with-react/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Create a User Interface with React’s JSX syntax</title>
+    <title>Use JSX effectively with React</title>
 </head>
 <body>
 <a href="https://egghead.io/lessons/react-use-jsx-effectively-with-react" target="_blank">https://egghead.io/lessons/react-use-jsx-effectively-with-react</a>
