06_render-two-elements-side-by-side-with-react-fragments/: add another child

--- a/06_render-two-elements-side-by-side-with-react-fragments/index.html
+++ b/06_render-two-elements-side-by-side-with-react-fragments/index.html
@@ -25,7 +25,8 @@
     let element;
     element = <React.Fragment>{childrenHello} {childrenWorld}</React.Fragment>
     // this is equivalent to the line above, just a shortcut
-    element = <>{childrenHello} {childrenWorld}</>
+    const childrenReact = <span>React!</span>
+    element = <>{childrenHello} {childrenWorld} {childrenReact}</>
 
     ReactDOM.render(element,document.getElementById('root'));
     console.log(children);
