13_manage-state-in-a-react-component-with-the-usestate-hook/: fix page title & tutorial link

--- a/13_manage-state-in-a-react-component-with-the-usestate-hook/index.html
+++ b/13_manage-state-in-a-react-component-with-the-usestate-hook/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Use Event Handlers with React</title>
+    <title>Manage state in a React Component with the useState hook</title>
 </head>
 <body>
-<a href="https://egghead.io/lessons/react-use-event-handlers-with-react-ab060351" target="_blank">https://egghead.io/lessons/react-use-event-handlers-with-react-ab060351</a>
+<a href="https://egghead.io/lessons/react-manage-state-in-a-react-component-with-the-usestate-hook" target="_blank">https://egghead.io/lessons/react-manage-state-in-a-react-component-with-the-usestate-hook</a>
 <br>
 <br>
 <div id="root"></div>
